<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="16dp"
	android:paddingStart="16dp"
	android:paddingEnd="16dp">

	<TextView
		android:id="@+id/dialog_header"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="5dp"
		android:text="@string/dialog_header"
		android:textAppearance="@style/TextAppearance.AppCompat.Display1"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.0" />

	<LinearLayout
		android:id="@+id/layout_container"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="5dp"
		android:orientation="horizontal"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/dialog_header"
		app:layout_constraintVertical_bias="0.0"
		android:baselineAligned="false">

		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/reason"
			style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginEnd="16dp"
			android:layout_weight="1"
			android:hint="@string/reason_hint"
			app:counterEnabled="true"
			app:counterMaxLength="50"
			app:errorEnabled="true">

			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/reason_input"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="textNoSuggestions"/>

		</com.google.android.material.textfield.TextInputLayout>
		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/amount"
			style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:hint="@string/amount_hint"
			app:suffixText="@string/euro_sign">

			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/amount_input"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="numberSigned|numberDecimal"/>

		</com.google.android.material.textfield.TextInputLayout>
	</LinearLayout>

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/date"
		style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/layout_container"
		app:layout_constraintVertical_bias="0.0"
		android:hint="@string/date_hint">
		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/date_input"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="date" />
	</com.google.android.material.textfield.TextInputLayout>
	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/description"
		style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="15dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/date"
		app:layout_constraintVertical_bias="0.0"
		android:hint="@string/description_hint"
		app:helperTextEnabled="true"
		app:helperText="(optional)">
	<com.google.android.material.textfield.TextInputEditText
		android:id="@+id/description_input"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:inputType="textMultiLine" />
	</com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>