<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<LinearLayout
		android:id="@+id/linearLayout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="15dp"
		android:gravity="center"
		android:orientation="horizontal"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.0">

		<TextView
			android:id="@+id/balanceTitle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginEnd="5dp"
			android:text="@string/current_balance"
			android:textAppearance="@style/TextAppearance.AppCompat.Large" />

		<TextView
			android:id="@+id/amount_indicator"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/zero"
			android:textAppearance="@style/TextAppearance.AppCompat.Large" />

		<TextView
			android:id="@+id/euro_sign"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/euro_sign"
			android:textAppearance="@style/TextAppearance.AppCompat.Large" />

	</LinearLayout>

	<LinearLayout
		android:id="@+id/daily_average"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="15dp"
		android:orientation="horizontal"
		android:gravity="center"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.05">

		<TextView
			android:id="@+id/average_title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginEnd="5dp"
			android:text="@string/daily_average"
			android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

		<TextView
			android:id="@+id/average_indicator"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/zero"
			android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

		<TextView
			android:id="@+id/euro_sign_avg"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/euro_sign"
			android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
	</LinearLayout>

	<androidx.recyclerview.widget.RecyclerView
		android:id="@+id/item_recycler"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginEnd="8dp"
		android:layout_marginStart="8dp"
		android:paddingBottom="100dp"
		android:paddingTop="20dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/daily_average"
		app:layout_constraintVertical_bias="0.05" >

	</androidx.recyclerview.widget.RecyclerView>
	<com.google.android.material.floatingactionbutton.FloatingActionButton
		android:id="@+id/action_add"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:clickable="true"
		android:layout_marginEnd="16dp"
		android:layout_marginBottom="16dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="1"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="1"
		app:srcCompat="@android:drawable/ic_input_add"
		android:contentDescription="@string/fab_desc" />

</androidx.constraintlayout.widget.ConstraintLayout>